--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "firebase": "^10.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-player": "^2.13.0",
     "react-router-dom": "^6.14.2",
+    "reactstrap": "^9.2.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.19"
   },
